tests/ui/deprecations.stderr
error: use of deprecated constant `pyo3::impl_::deprecations::PYCLASS_GC_OPTION`: implement a `__traverse__` `#[pymethod]` instead of using `gc` option
 --> tests/ui/deprecations.rs:5:11
  |
5 | #[pyclass(gc)]
  |           ^^
  |
note: the lint level is defined here
 --> tests/ui/deprecations.rs:1:9
  |
1 | #![deny(deprecated)]
  |         ^^^^^^^^^^
